--- a/sites/all/themes/gxnulib/sass/components/tabs/_search-tab.scss
+++ b/sites/all/themes/gxnulib/sass/components/tabs/_search-tab.scss
@@ -9,15 +9,24 @@ and open the template in the editor.
 */
 .block--quicktabs-search-tabs {
     .quicktabs_main {
-        padding: 0.5em;
+        padding: $vert-spacing-unit;
         background: $white;
         @include border-bottom-radius($radius);
         @include pie-clearfix;
         text-align: center;
-        height: 191px;
 
         input[type="text"] {
-            width: 55%;
+            width: 85%;
+            height: 3em;
+            @include input-placeholder {
+                font-style: italic;
+            }
+            @include border-right-radius(0);
+        }
+        input[type="submit"] {
+            width: 15%;
+            height: 3em;
+            @include border-left-radius(0);
         }
     }
 
@@ -26,6 +35,7 @@ and open the template in the editor.
         margin: 0;
         @extend .delta;
         @include pie-clearfix;
+        font-weight: bold;
 
         a {
             color: $white;
@@ -61,11 +71,7 @@ and open the template in the editor.
                 a {
                     color: $black;
                 }
-            }
-            
-            a {
-                border-right: 1px solid $light-red;
-            }            
+            }          
         }
     }
 }
