--- a/sites/all/themes/gxnulib/css/gxnulib.styles.css
+++ b/sites/all/themes/gxnulib/css/gxnulib.styles.css
@@ -714,7 +714,7 @@ and open the template in the editor.
 */
 /* line 11, ../sass/components/tabs/_search-tab.scss */
 .block--quicktabs-search-tabs .quicktabs_main {
-  padding: 20px;
+  padding: 40px 20px;
   background: #ffffff;
   -moz-border-radius-bottomleft: 4px;
   -webkit-border-bottom-left-radius: 4px;
@@ -779,7 +779,7 @@ and open the template in the editor.
   .block--quicktabs-search-tabs ul.quicktabs-tabs li {
     background: #9a2525;
     margin: 0 auto;
-    padding: 0.5em;
+    padding: 20px 0.5em;
     width: 50%;
     text-align: center;
     float: left;
@@ -788,33 +788,34 @@ and open the template in the editor.
     *vertical-align: auto;
     *zoom: 1;
     *display: inline;
-    *zoom: 1; }
+    *zoom: 1;
+    cursor: pointer; }
     /* line 38, D:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/compass-core-1.0.3/stylesheets/compass/utilities/general/_clearfix.scss */
     .block--quicktabs-search-tabs ul.quicktabs-tabs li:after {
       content: "";
       display: table;
       clear: both; }
-    /* line 54, ../sass/components/tabs/_search-tab.scss */
+    /* line 55, ../sass/components/tabs/_search-tab.scss */
     .block--quicktabs-search-tabs ul.quicktabs-tabs li:hover {
       background: #852020;
       border-bottom: none; }
-    /* line 58, ../sass/components/tabs/_search-tab.scss */
+    /* line 59, ../sass/components/tabs/_search-tab.scss */
     .block--quicktabs-search-tabs ul.quicktabs-tabs li:first-child {
       -moz-border-radius-topleft: 4px;
       -webkit-border-top-left-radius: 4px;
       border-top-left-radius: 4px; }
-    /* line 61, ../sass/components/tabs/_search-tab.scss */
+    /* line 62, ../sass/components/tabs/_search-tab.scss */
     .block--quicktabs-search-tabs ul.quicktabs-tabs li:last-child {
       -moz-border-radius-topright: 4px;
       -webkit-border-top-right-radius: 4px;
       border-top-right-radius: 4px; }
-      /* line 63, ../sass/components/tabs/_search-tab.scss */
+      /* line 64, ../sass/components/tabs/_search-tab.scss */
       .block--quicktabs-search-tabs ul.quicktabs-tabs li:last-child a {
         border-right: none; }
-    /* line 68, ../sass/components/tabs/_search-tab.scss */
+    /* line 69, ../sass/components/tabs/_search-tab.scss */
     .block--quicktabs-search-tabs ul.quicktabs-tabs li.active {
       background: #ffffff; }
-      /* line 71, ../sass/components/tabs/_search-tab.scss */
+      /* line 72, ../sass/components/tabs/_search-tab.scss */
       .block--quicktabs-search-tabs ul.quicktabs-tabs li.active a {
         color: #000000; }
 
