--- a/sites/all/themes/gxnulib/css/gxnulib.no-query.css
+++ b/sites/all/themes/gxnulib/css/gxnulib.no-query.css
@@ -150,7 +150,7 @@ a:hover {
  */
 /* line 28, ../sass/base/_typography.scss */
 h1, .alpha,
-h2, .beta,
+h2, .beta, .article-title,
 h3, .gamma,
 h4, .delta, legend, .block__title, .block--quicktabs-news-tabs ul.quicktabs-tabs, .block--quicktabs-search-tabs ul.quicktabs-tabs,
 h5, .epsilon,
@@ -166,8 +166,9 @@ h6, .zeta {
   h1 a:visited, .alpha a,
   .alpha a:visited,
   h2 a,
-  h2 a:visited, .beta a,
+  h2 a:visited, .beta a, .article-title a,
   .beta a:visited,
+  .article-title a:visited,
   h3 a,
   h3 a:visited, .gamma a,
   .gamma a:visited,
@@ -189,40 +190,46 @@ h6, .zeta {
 
 /* line 45, ../sass/base/_typography.scss */
 h1, .alpha {
-  font-size: 55px;
-  font-size: 3.92857rem;
-  font-weight: 700; }
+  font-size: 54px;
+  font-size: 3.85714rem;
+  font-weight: 700;
+  line-height: 80px; }
 
-/* line 49, ../sass/base/_typography.scss */
-h2, .beta {
+/* line 50, ../sass/base/_typography.scss */
+h2, .beta, .article-title {
   font-size: 34px;
   font-size: 2.42857rem;
-  font-weight: 700; }
+  font-weight: 700;
+  line-height: 54px; }
 
-/* line 53, ../sass/base/_typography.scss */
+/* line 55, ../sass/base/_typography.scss */
 h3, .gamma {
-  font-size: 21px;
-  font-size: 1.5rem; }
-
-/* line 56, ../sass/base/_typography.scss */
-h4, .delta, legend, .block__title, .block--quicktabs-news-tabs ul.quicktabs-tabs, .block--quicktabs-search-tabs ul.quicktabs-tabs {
-  font-size: 18px;
-  font-size: 1.28571rem; }
+  font-size: 22px;
+  font-size: 1.57143rem;
+  line-height: 40px; }
 
 /* line 59, ../sass/base/_typography.scss */
+h4, .delta, legend, .block__title, .block--quicktabs-news-tabs ul.quicktabs-tabs, .block--quicktabs-search-tabs ul.quicktabs-tabs {
+  font-size: 18px;
+  font-size: 1.28571rem;
+  line-height: 32px; }
+
+/* line 63, ../sass/base/_typography.scss */
 h5, .epsilon {
   font-size: 16px;
-  font-size: 1.14286rem; }
+  font-size: 1.14286rem;
+  line-height: 26px; }
 
-/* line 62, ../sass/base/_typography.scss */
+/* line 67, ../sass/base/_typography.scss */
 h6, .zeta {
   font-size: 16px;
-  font-size: 1.14286rem; }
+  font-size: 1.14286rem;
+  line-height: 24px; }
 
 /**
  * $PARAGRAPHS
  */
-/* line 69, ../sass/base/_typography.scss */
+/* line 75, ../sass/base/_typography.scss */
 p,
 blockquote {
   margin: 0;
@@ -231,7 +238,7 @@ blockquote {
   padding-bottom: 0em;
   margin-bottom: 1.42857em; }
 
-/* line 74, ../sass/base/_typography.scss */
+/* line 80, ../sass/base/_typography.scss */
 p + img {
   float: left;
   margin-right: 1em; }
@@ -239,7 +246,7 @@ p + img {
 /**
  * $QUOTES
  */
-/* line 82, ../sass/base/_typography.scss */
+/* line 88, ../sass/base/_typography.scss */
 blockquote {
   margin-top: 0em;
   padding-top: 1.42857em;
@@ -254,18 +261,18 @@ blockquote {
   padding-left: 0.71429em;
   font-style: italic;
   color: #852020; }
-  /* line 92, ../sass/base/_typography.scss */
+  /* line 98, ../sass/base/_typography.scss */
   blockquote p {
     margin: 0; }
 
-/* line 97, ../sass/base/_typography.scss */
+/* line 103, ../sass/base/_typography.scss */
 q {
   font-style: italic; }
 
 /**
  * $MARKS
  */
-/* line 104, ../sass/base/_typography.scss */
+/* line 110, ../sass/base/_typography.scss */
 mark,
 .marker {
   padding: 0.1em 0.5em;
@@ -281,7 +288,7 @@ mark,
 /**
  * $FOOTERS
  */
-/* line 120, ../sass/base/_typography.scss */
+/* line 126, ../sass/base/_typography.scss */
 footer,
 .l-footer {
   padding: 20px 0;
@@ -291,7 +298,7 @@ footer,
   color: #666666;
   font-size: 12px;
   font-size: 0.85714rem; }
-  /* line 131, ../sass/base/_typography.scss */
+  /* line 137, ../sass/base/_typography.scss */
   footer a,
   .l-footer a {
     color: #666666; }
@@ -299,7 +306,7 @@ footer,
 /**
  * $BARS
  */
-/* line 139, ../sass/base/_typography.scss */
+/* line 145, ../sass/base/_typography.scss */
 .l-bar {
   padding: 0.1em 0.5em;
   background: #262626;
@@ -307,42 +314,42 @@ footer,
   color: #a6a6a6;
   font-size: 12px;
   font-size: 0.85714rem; }
-  /* line 148, ../sass/base/_typography.scss */
+  /* line 154, ../sass/base/_typography.scss */
   .l-bar a {
     color: #a6a6a6; }
-    /* line 150, ../sass/base/_typography.scss */
+    /* line 156, ../sass/base/_typography.scss */
     .l-bar a:hover {
       color: #cccccc; }
 
 /**
  * $USERFUL LINKS
  */
-/* line 159, ../sass/base/_typography.scss */
+/* line 165, ../sass/base/_typography.scss */
 .l-useful-link {
   text-align: center;
   font-size: 12px;
   font-size: 0.85714rem;
   color: #a6a6a6; }
-  /* line 164, ../sass/base/_typography.scss */
+  /* line 170, ../sass/base/_typography.scss */
   .l-useful-link a {
     color: #a6a6a6; }
-    /* line 166, ../sass/base/_typography.scss */
+    /* line 172, ../sass/base/_typography.scss */
     .l-useful-link a:visited {
       color: #a6a6a6; }
-    /* line 169, ../sass/base/_typography.scss */
+    /* line 175, ../sass/base/_typography.scss */
     .l-useful-link a:hover {
       color: #cccccc; }
 
 /**
  * $COPYRIGHT
  */
-/* line 178, ../sass/base/_typography.scss */
+/* line 184, ../sass/base/_typography.scss */
 .l-copyright {
   text-align: center;
   font-size: 12px;
   font-size: 0.85714rem;
   color: #666666; }
-  /* line 183, ../sass/base/_typography.scss */
+  /* line 189, ../sass/base/_typography.scss */
   .l-copyright a {
     color: #666666; }
 
@@ -475,6 +482,45 @@ and open the template in the editor.
 .search-form {
   float: left; }
 
+/*
+To change this license header, choose License Headers in Project Properties.
+To change this template file, choose Tools | Templates
+and open the template in the editor.
+*/
+/* 
+    Created on : Apr 27, 2015, 4:18:20 PM
+    Author     : Stephen
+*/
+/* line 10, ../sass/components/menus/_breadcrumb.scss */
+.breadcrumb {
+  margin: 0;
+  padding: 0;
+  border: 0; }
+  /* line 13, D:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/toolkit-2.9.0/stylesheets/toolkit/_clearfix.scss */
+  .breadcrumb:after {
+    content: "";
+    display: table;
+    clear: both; }
+  /* line 62, D:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/compass-core-1.0.3/stylesheets/compass/typography/lists/_horizontal-list.scss */
+  .breadcrumb li {
+    list-style-image: none;
+    list-style-type: none;
+    margin-left: 0;
+    white-space: nowrap;
+    float: left; }
+  /* line 13, ../sass/components/menus/_breadcrumb.scss */
+  .breadcrumb li {
+    padding: 20px 0.5em; }
+    /* line 16, ../sass/components/menus/_breadcrumb.scss */
+    .breadcrumb li:after {
+      font-family: "FontAwesome";
+      content: "\f101";
+      padding-left: .5em;
+      vertical-align: baseline; }
+    /* line 22, ../sass/components/menus/_breadcrumb.scss */
+    .breadcrumb li:last-child:after {
+      content: ""; }
+
 /* line 1, ../sass/components/menus/_navigation.scss */
 .tb-megamenu .nav li.dropdown > .dropdown-toggle .caret, .tb-megamenu .nav li.dropdown > .dropdown-toggle:hover .caret, .tb-megamenu .nav li.dropdown.open > .dropdown-toggle .caret, .tb-megamenu .nav li.dropdown.open > .dropdown-toggle:hover .caret {
   border-top-color: #000000;
@@ -538,6 +584,31 @@ and open the template in the editor.
   /* line 120, ../sass/components/menus/_navigation.scss */
   .tb-megamenu .block-view-demo .item-list ul li {
     border-bottom: 1px solid #eee; }
+
+/* line 129, ../sass/components/menus/_navigation.scss */
+.tb-megamenu-submenu nav ul.menu li {
+  padding: .1em .5em; }
+  /* line 131, ../sass/components/menus/_navigation.scss */
+  .tb-megamenu-submenu nav ul.menu li:before {
+    font-family: "FontAwesome";
+    content: "\f101";
+    padding-right: .5em;
+    font-size: 10px;
+    font-size: 0.71429rem;
+    color: #9a2525; }
+
+/*
+To change this license header, choose License Headers in Project Properties.
+To change this template file, choose Tools | Templates
+and open the template in the editor.
+*/
+/* 
+    Created on : Apr 27, 2015, 4:38:31 PM
+    Author     : Stephen
+*/
+/* line 10, ../sass/components/misc/_article-title.scss */
+.article-title {
+  text-align: center; }
 
 /*
 To change this license header, choose License Headers in Project Properties.
