--- a/sites/all/themes/gxnulib/sass/base/_typography.scss
+++ b/sites/all/themes/gxnulib/sass/base/_typography.scss
@@ -43,24 +43,30 @@ h6, .zeta {
 }
 
 h1, .alpha {
-    @include font-size(55px);
+    @include font-size(54px);
     font-weight: 700;
+    line-height: 80px;
 }
 h2, .beta {
     @include font-size(34px);
     font-weight: 700;
+    line-height: 54px;
 }
 h3, .gamma {
-    @include font-size(21px);
+    @include font-size(22px);
+    line-height: 40px;
 }
 h4, .delta {
     @include font-size(18px);
+    line-height: 32px;
 }
 h5, .epsilon {
     @include font-size(16px);
+    line-height: 26px;
 }
 h6, .zeta {
     @include font-size(16px);
+    line-height: 24px;
 }
 
 /**
